@@ -1,3 +1,9 @@
+2004-05-19  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	* gst/gstvalue.c: (gst_value_deserialize_int_helper):
+	  fix int variable deserialization and add a helper so we can actually
+	  debug this.
+
 2004-05-18  David Schleef  <ds@schleef.org>
 
 	* testsuite/debug/commandline.c: (main): Call ./commandline, not
